OpenEXR multilayer image truncated on save #50673

Closed
opened 2017-02-13 21:38:39 +01:00 by Eelco Dolstra · 7 comments

System Information
NixOS 16.09, Linux kernel 4.4.47, NVIDIA GTX 970

Blender Version
Broken: 2.78a, 2.78b (built against OpenEXR 2.2.0)

Short description of error

When saving a 1280x720 render result as an OpenEXR multilayer image, with DWAB compression, the resulting OpenEXR image is truncated: only the bottom quarter or so of the image is saved, the rest is black or transparent.

This does not occur with DWAA or no compression. Changing the resolution to 1920x1080 also fixed it, but other resolutions make even more of the image disappear. Disabling some render passes also made the problem go away.

The render result:
original.png

The resulting OpenEXR image opened in Blender:
loaded.png

Blend file: multilayer-dwab.blend

Broken OpenEXR file: multilayer-dwab.exr

Exact steps for others to reproduce the error

  • Open attached blend file
  • Render (the blend file has Combined/Z/Mist/Normal/UV passes enabled).
  • Hit F3, save as OpenEXR Multilayer, DWAB compression, RGBA, Float (Full).
  • Load the resulting image into Blender.
**System Information** NixOS 16.09, Linux kernel 4.4.47, NVIDIA GTX 970 **Blender Version** Broken: 2.78a, 2.78b (built against OpenEXR 2.2.0) **Short description of error** When saving a 1280x720 render result as an OpenEXR multilayer image, with DWAB compression, the resulting OpenEXR image is truncated: only the bottom quarter or so of the image is saved, the rest is black or transparent. This does not occur with DWAA or no compression. Changing the resolution to 1920x1080 also fixed it, but other resolutions make even more of the image disappear. Disabling some render passes also made the problem go away. The render result: ![original.png](https://archive.blender.org/developer/F484906/original.png) The resulting OpenEXR image opened in Blender: ![loaded.png](https://archive.blender.org/developer/F484910/loaded.png) Blend file: [multilayer-dwab.blend](https://archive.blender.org/developer/F484921/multilayer-dwab.blend) Broken OpenEXR file: ![multilayer-dwab.exr](https://archive.blender.org/developer/F484922/multilayer-dwab.exr) **Exact steps for others to reproduce the error** * Open attached blend file * Render (the blend file has Combined/Z/Mist/Normal/UV passes enabled). * Hit F3, save as OpenEXR Multilayer, DWAB compression, RGBA, Float (Full). * Load the resulting image into Blender.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @edolstra

Added subscriber: @edolstra
Sergey Sharybin was assigned by Aaron Carlisle 2017-03-01 16:48:44 +01:00

This seems to be a bug in OpenEXR itself, which was fixed by - [x]. Unfortunately, this commit is in none of the branches except from development one (it is not in the 2.2fixes branch).

This seems to be a bug in OpenEXR itself, which was fixed by - [x]. Unfortunately, this commit is in none of the branches except from development one (it is not in the 2.2fixes branch). - [x] https://github.com/openexr/openexr/commit/c9a2e193ce243c66177ddec6be43bc6f655ff78a

From quick around seems we can not solve it from our side, just need to wait for the new OpenEXR to be released.

For until then will remove the broken compression setting from the interface.

From quick around seems we can not solve it from our side, just need to wait for the new OpenEXR to be released. For until then will remove the broken compression setting from the interface.

This issue was referenced by d59721c2c3

This issue was referenced by d59721c2c311b18845a89fa30a9291a02f36d099

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50673
No description provided.