Fix T50673: OpenEXR multilayer image truncated on save

The issue is in OpenEXR itself. See the report fomr some more details.